--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 <meta name="keywords" content="{% block keywords %}enginelektronik,engin elektronik,engin elektronik tv hastahanesi,engin elektronik tv.hastahanesi{% endblock %}">
 <meta name="robots" content="index, follow">
 <meta name="google-site-verification" content="6L2RD__lUdlr8X2lTzgKzJfS6nDDCbCe6DoskQGwL1c" />
+<meta name="referrer" content="no-referrer" />
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 <link rel="canonical" href="{{ CANONICAL_PATH }}" />
 
