--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block description %}Tv satışı-tamiri, kart satışı-tamiri, kumanda satışı-tamiri, tv ayak satışı, iptv cihaz satışı-kodu, 2.el tv satışı, kablo satışı, uydu alıcısı satışı{% endblock %}
-{% block keywords %}engin elektronik, televizyon, tv, kumanda, tv tamiri, televizyon kanalı, uydu ayarlama, kanal sıralama, kanal listeleme, iptv, iptv kod, cihaz, televizyon ayağı, tv ayağı, istanbul bağcılar, istanbul yüzyıl, elektronik ürünler, elektronik, tv kartı, televizyon kart tamiri, tv uydu{% endblock %}
+{% block keywords %}enginelektronik,engin elektronik,engin elektronik tv hastahanesi,engin elektronik tv.hastahanesi{% endblock %}
 {% block title %}Engin Elektronik Tv.Hastanesi {% endblock %}
 
 
